Add alt text and show poster in original size.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,7 @@
     class="application-name"
     (click)="goToRoot()"
     [src]="'/assets/poll-a-lot.svg'"
+    alt="Poll A Lot logo"
   />
 
   <mat-menu #appMenu="matMenu">
