--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -18,6 +18,7 @@
               class="poster"
               *ngIf="status.movie.posterUrl"
               [src]="status.movie.posterUrl"
+              alt="Movie poster image"
             />
             <div class="chart">
               <movie-score
