--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -54,13 +54,14 @@ div.dialog-content {
 
   .poster {
     height: $posterHeight;
-    width: $posterWidth;
+    // width: $posterWidth;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 19px;
     border-radius: 5px;
     background-color: black;
     background-size: cover;
     position: relative;
+    z-index: 1;
   }
 }
 
@@ -428,6 +429,10 @@ $poster-base-unit: min(95vw, 472px);
   padding: 10px 10px 8px;
   box-sizing: border-box;
 
+  position: relative;
+  top: -8px;
+  z-index: 0;
+
   .flex {
     align-items: center;
     justify-content: center;
@@ -522,6 +527,7 @@ mat-expansion-panel.mat-expansion-panel {
     position: absolute;
     top: 0;
     right: 6px;
+    z-index: 2;
   }
 }
 
