--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -57,13 +57,11 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     z-index: 2;
     border-radius: 6px;
     width: $posterWidth;
-    height: $posterHeight;
     background-size: cover;
     background-image: url("../../assets/img/poster-placeholder.png");
   }
 
   .poster {
-    height: $posterHeight;
     width: $posterWidth;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 19px;
@@ -324,7 +322,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     position: absolute;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    top: calc(#{$posterHeight} - 16px);
+    bottom: 0;
     width: $posterWidth;
     font-size: 17px;
     padding: 0 0 4px;
