--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -66,6 +66,10 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 19px;
     border-radius: 5px;
+
+    &-placeholder {
+      height: $posterHeight;
+    }
   }
 
   .title {
@@ -338,7 +342,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     .reaction {
       position: relative;
       user-select: none;
-      padding: 4px 0;
+      padding: 6px 0;
       transition: all 0.6s ease;
       display: flex;
       flex-direction: column;
