Add lazyload module to ease loading. Improve first load.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+
 <div class="page-container">
-    <header></header>
-    <main class="content">
-        <router-outlet></router-outlet>
-    </main>
-    <footer></footer>
+  <header></header>
+  <main class="content">
+    <router-outlet></router-outlet>
+  </main>
+  <footer></footer>
 </div>
