--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -19,7 +19,7 @@
           (swipeEnd)="onSwipeEnd($event)"
           trapScroll
           #backdrop
-          [ngStyle]="{'background-image': movie.originalObject?.images ? ('url(http://image.tmdb.org/t/p/' + 'w1280/' + movie.originalObject.images.backdrops[current.val].file_path + ')') : movie.backdropUrl}"
+          [lazyLoad]="'http://image.tmdb.org/t/p/' + 'w1280/' + movie.originalObject.images.backdrops[current.val].file_path"
         >
           <div
             class="bd-selectors"
@@ -65,7 +65,8 @@
         <div class="poster-container">
           <img
             class="poster"
-            [src]="'http://image.tmdb.org/t/p/' + 'w342/' + movie.originalObject.poster_path"
+            [defaultImage]="'/assets/img/poster-placeholder.png'"
+            [lazyLoad]="('http://image.tmdb.org/t/p/' + 'w342/' + movie.originalObject.poster_path)"
           />
           <movie-score
             class="cursor-pointer"
@@ -309,7 +310,8 @@
             >
               <div
                 class="recommendation-poster"
-                [ngStyle]="{'background-image': recommendation.poster_path ? ('url(http://image.tmdb.org/t/p/' + 'w185/' + recommendation.poster_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+                [defaultImage]="'/assets/img/poster-placeholder.png'"
+                [lazyLoad]="'http://image.tmdb.org/t/p/' + 'w185/' + recommendation.poster_path"
               ></div>
               <movie-score
                 class="cursor-pointer"
