Add reveal animation to availability banner.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -74,19 +74,21 @@
             [value]="movie.tmdbRating"
             size="m"
           ></movie-score>
-          <div
-            class="available-short"
-            *ngIf="availableShort$ | async; let available"
-          >
-            <div class="flex cursor-pointer" (click)="openAvailable()">
-              <div
-                class="watch-provider-image"
-                [title]="available.provider.provider_name"
-                [ngStyle]="{'background-image': available.provider.logo_path ? ('url(http://image.tmdb.org/t/p/' + 'w92/' + available.provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
-              ></div>
-              <div class="flex-column text">
-                <div class="">{{ available.title }}</div>
-                <div class="label">Check it out!</div>
+          <div class="overflow-hidden">
+            <div
+              class="available-short"
+              *ngIf="availableShort$ | async; let available"
+            >
+              <div class="flex cursor-pointer" (click)="openAvailable()">
+                <div
+                  class="watch-provider-image"
+                  [title]="available.provider.provider_name"
+                  [ngStyle]="{'background-image': available.provider.logo_path ? ('url(http://image.tmdb.org/t/p/' + 'w92/' + available.provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+                ></div>
+                <div class="flex-column text">
+                  <div class="">{{ available.title }}</div>
+                  <div class="label">Check it out!</div>
+                </div>
               </div>
             </div>
           </div>
