--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -269,16 +269,16 @@
 <ng-template #pollItemLoader>
   <span class="vote-multiple show">✨ Poll is loading ✨</span>
   <div class="loader-space"></div>
-  <mat-card class="option-card loader-bg drop-in-1">
+  <mat-card class="option-card loader-bg">
     <spinner size="s"></spinner>
   </mat-card>
-  <mat-card class="option-card loader-bg drop-in-2">
+  <mat-card class="option-card loader-bg">
     <spinner size="s"></spinner>
   </mat-card>
-  <mat-card class="option-card loader-bg drop-in-3">
+  <mat-card class="option-card loader-bg">
     <spinner size="s"></spinner>
   </mat-card>
-  <mat-card class="option-card loader-bg drop-in-4">
+  <mat-card class="option-card loader-bg">
     <spinner size="s"></spinner>
   </mat-card>
 </ng-template>
