--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -1,6 +1,17 @@
 $posterWidth: min(38vw, 170px);
 $posterHeight: calc(3 / 2 * $posterWidth);
 
+@keyframes pl-drop-in {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0px);
+  }
+}
+
 :host {
   height: 100%;
   display: flex;
@@ -426,13 +437,21 @@ $poster-base-unit: min(95vw, 472px);
   }
 }
 
+.overflow-hidden {
+  overflow: hidden;
+  margin-top: -22px;
+  position: relative;
+  top: -8px;
+  z-index: 0;
+  height: 65px;
+}
+
 .available-short {
   font-size: 0.7em;
   line-height: 1.2em;
   min-width: $posterWidth;
   justify-content: center;
   align-items: center;
-  margin-top: -22px;
   margin-bottom: 20px;
   background: linear-gradient(145deg, #8320e9, #36cddc);
   color: white;
@@ -441,9 +460,7 @@ $poster-base-unit: min(95vw, 472px);
   padding: 10px 10px 8px;
   box-sizing: border-box;
 
-  position: relative;
-  top: -8px;
-  z-index: 0;
+  animation: pl-drop-in 1s ease 200ms backwards;
 
   .flex {
     align-items: center;
