--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -74,7 +74,7 @@ div.dialog-content {
     position: relative;
     z-index: 1;
 
-    transition: opacity 1s;
+    transition: opacity 0.7s;
     opacity: 0;
 
     &.ng-lazyloaded {
@@ -460,7 +460,7 @@ $poster-base-unit: min(95vw, 472px);
   padding: 10px 10px 8px;
   box-sizing: border-box;
 
-  animation: pl-drop-in 1s ease 200ms backwards;
+  animation: pl-drop-in 1200ms ease 400ms backwards;
 
   .flex {
     align-items: center;
