--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -22,6 +22,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
 
     position: relative;
     top: -12px;
+    z-index: 4;
   }
 
   .original-title {
