--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -431,8 +431,8 @@ $poster-base-unit: min(95vw, 472px);
 
   &-poster {
     width: calc(#{$poster-base-unit} / 3 - 20px);
-    height: calc((#{$poster-base-unit} / 3 - 20px) * 3 / 2);
-    background-size: cover;
+    // height: calc((#{$poster-base-unit} / 3 - 20px) * 3 / 2);
+    // background-size: cover;
     border-radius: 6px;
     margin: 2px;
   }
