--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -19,7 +19,7 @@
           (swipeEnd)="onSwipeEnd($event)"
           trapScroll
           #backdrop
-          [lazyLoad]="'http://image.tmdb.org/t/p/' + 'w1280/' + movie.originalObject.images.backdrops[current.val].file_path"
+          [lazyLoad]="'https://image.tmdb.org/t/p/' + 'w1280/' + movie.originalObject.images.backdrops[current.val].file_path"
         >
           <div
             class="bd-selectors"
@@ -66,12 +66,12 @@
           <img
             class="poster"
             [defaultImage]="'/assets/img/poster-placeholder.png'"
-            [lazyLoad]="'http://image.tmdb.org/t/p/w92' + movie.originalObject.poster_path + ' 150w,'
-                + 'http://image.tmdb.org/t/p/w154' + movie.originalObject.poster_path + ' 300w,'
-                + 'http://image.tmdb.org/t/p/w185' + movie.originalObject.poster_path + ' 380w,'
-                + 'http://image.tmdb.org/t/p/w342' + movie.originalObject.poster_path+ ' 700w,'
-                + 'http://image.tmdb.org/t/p/w500' + movie.originalObject.poster_path + ' 1000w,'
-                + 'http://image.tmdb.org/t/p/w780' + movie.originalObject.poster_path + ' 1400w'"
+            [lazyLoad]="'https://image.tmdb.org/t/p/w92' + movie.originalObject.poster_path + ' 150w,'
+                + 'https://image.tmdb.org/t/p/w154' + movie.originalObject.poster_path + ' 300w,'
+                + 'https://image.tmdb.org/t/p/w185' + movie.originalObject.poster_path + ' 380w,'
+                + 'https://image.tmdb.org/t/p/w342' + movie.originalObject.poster_path+ ' 700w,'
+                + 'https://image.tmdb.org/t/p/w500' + movie.originalObject.poster_path + ' 1000w,'
+                + 'https://image.tmdb.org/t/p/w780' + movie.originalObject.poster_path + ' 1400w'"
             [useSrcset]="true"
           />
           <movie-score
@@ -89,7 +89,7 @@
                 <div
                   class="watch-provider-image"
                   [title]="available.provider.provider_name"
-                  [ngStyle]="{'background-image': available.provider.logo_path ? ('url(http://image.tmdb.org/t/p/' + 'w92/' + available.provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+                  [ngStyle]="{'background-image': available.provider.logo_path ? ('url(https://image.tmdb.org/t/p/' + 'w92/' + available.provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
                 ></div>
                 <div class="flex-column text">
                   <div class="">{{ available.title }}</div>
@@ -181,7 +181,7 @@
         <div class="cast-member" *ngFor="let member of movie.credits?.cast">
           <div
             class="cast-profile-picture"
-            [ngStyle]="{'background-image': member.profile_path ? ('url(http://image.tmdb.org/t/p/' + 'w92/' + member.profile_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+            [ngStyle]="{'background-image': member.profile_path ? ('url(https://image.tmdb.org/t/p/' + 'w92/' + member.profile_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
           ></div>
           <div class="name">{{ member.name }}</div>
           <div class="character">{{ member.character }}</div>
@@ -264,7 +264,7 @@
                   <div
                     class="watch-provider-image"
                     [title]="provider.provider_name"
-                    [ngStyle]="{'background-image': provider.logo_path ? ('url(http://image.tmdb.org/t/p/' + 'w92/' + provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+                    [ngStyle]="{'background-image': provider.logo_path ? ('url(https://image.tmdb.org/t/p/' + 'w92/' + provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
                   ></div>
                   <!-- <div class="name">{{ provider.provider_name }}</div> -->
                 </div>
@@ -283,7 +283,7 @@
                   >
                     <div
                       class="watch-provider-image"
-                      [ngStyle]="{'background-image': provider.logo_path ? ('url(http://image.tmdb.org/t/p/' + 'w92/' + provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+                      [ngStyle]="{'background-image': provider.logo_path ? ('url(https://image.tmdb.org/t/p/' + 'w92/' + provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
                     ></div>
                     <!-- <div class="name">{{ provider.provider_name }}</div> -->
                   </div>
@@ -319,12 +319,12 @@
               <img
                 class="recommendation-poster"
                 [defaultImage]="'/assets/img/poster-placeholder.png'"
-                [lazyLoad]="'http://image.tmdb.org/t/p/w92' + recommendation.poster_path + ' 300w,'
-                + 'http://image.tmdb.org/t/p/w154' + recommendation.poster_path + ' 400w,'
-                + 'http://image.tmdb.org/t/p/w185' + recommendation.poster_path + ' 500w,'
-                + 'http://image.tmdb.org/t/p/w342' + recommendation.poster_path + ' 700w,'
-                + 'http://image.tmdb.org/t/p/w500' + recommendation.poster_path + ' 800w,'
-                + 'http://image.tmdb.org/t/p/w780' + recommendation.poster_path + ' 1100w'"
+                [lazyLoad]="'https://image.tmdb.org/t/p/w92' + recommendation.poster_path + ' 300w,'
+                + 'https://image.tmdb.org/t/p/w154' + recommendation.poster_path + ' 400w,'
+                + 'https://image.tmdb.org/t/p/w185' + recommendation.poster_path + ' 500w,'
+                + 'https://image.tmdb.org/t/p/w342' + recommendation.poster_path + ' 700w,'
+                + 'https://image.tmdb.org/t/p/w500' + recommendation.poster_path + ' 800w,'
+                + 'https://image.tmdb.org/t/p/w780' + recommendation.poster_path + ' 1100w'"
                 [useSrcset]="true"
               />
               <movie-score
