--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -283,7 +283,7 @@
                   >
                     <div
                       class="watch-provider-image"
-                      [ngStyle]="{'background-image': provider.logo_path ? ('url(https://image.tmdb.org/t/p/' + 'w92/' + provider.logo_path + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
+                      [ngStyle]="{'background-image': provider.logo_path ? ('url(https://image.tmdb.org/t/p/' + 'w92' + provider.logo_path.replace('.jpg', '.svg') + ')') : 'linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%)'}"
                     ></div>
                     <!-- <div class="name">{{ provider.provider_name }}</div> -->
                   </div>
