--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -233,7 +233,7 @@ div.dialog-content {
   font-size: 0.5em;
   width: 100%;
   text-align: center;
-  color: #ccc;
+  color: #717171;
   padding-bottom: 10px;
   padding-top: 9px;
 }
