--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -1,4 +1,4 @@
-$posterWidth: min(27vw, 150px);
+$posterWidth: min(27vw, 154px);
 $posterHeight: calc(3 / 2 * $posterWidth);
 
 :host {
@@ -226,7 +226,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     font-size: 0.5em;
     width: 100%;
     text-align: center;
-    color: #ccc;
+    color: #717171;
     padding-bottom: 10px;
     padding-top: 9px;
 
