--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -284,6 +284,7 @@ div.dialog-content {
   flex-direction: row;
   width: 100%;
   overflow-x: auto;
+  padding-bottom: 20px;
 }
 
 // Gradient button
