--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -81,7 +81,7 @@
                 {{ status.movie.title }}
                 <ng-container
                   *ngIf="status.movie.title !== status.movie.originalTitle"
-                  ><span class="original-title"
+                  ><br /><span class="original-title"
                     >({{ status.movie.originalTitle }})</span
                   ></ng-container
                 >
